--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 add_executable(Conteiners
   main.cpp
   myvector.h
+  mylistforward.h
+
   testclass.h
 )
 target_link_libraries(Conteiners Qt${QT_VERSION_MAJOR}::Core)
